Blockquote and source code horizontal scroll fixed.

--- a/themes/brut/css/main.css
+++ b/themes/brut/css/main.css
@@ -117,7 +117,7 @@ blockquote {
     border-left: 2px solid;
     padding: 1em 2em;
     margin-bottom: 1em;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 pre > code {
